# Block-B-blog

./: Gemfile
.github/workflows/: jekyll-gh-pages.yml
Code/: .gitignore  CMakeLists.txt  main.cpp
Code/include/: FileGenerator.hpp  FileParser.hpp  Objects.hpp  SimpleOptionParser.hpp  XmlParser.hpp
Code/src/: FileGenerator.cpp  FileParser.cpp  SimpleOptionParser.cpp  XmlParser.cpp
_posts/: 2024-01-23-welcome-to-jekyll.markdown
page/: index.markdown
page/_layouts/: default.html
